add route get user's video
